
      - Don't unconditionally add Content-Length header in
        HTTPResponse.getHeaders(). Do it only in output(), where the
        size of the data is known.

      - Let the determination of an HTTP request's locale be handled
        by an adapter that is actually looked up by interface
        (``IUserPreferredLanguages``), instead of hard-wiring the
        default one.

    Much thanks to everyone who contributed to this release:

      Jim Fulton, Fred Drake, Philipp von Weitershausen, Stephan Richter,
      Gustavo Niemeyer, Daniel Nouri, Volker Bachschneider, Roger Ineichen,
      Shane Hathaway, Bjorn Tillenius, Garrett Smith, Marius Gedminas, Stuart
      Bishop, Dominik Huber, Dmitry Vasiliev

      Note: If you are not listed and contributed, please add yourself. This
      note will be deleted before the release.

  ------------------------------------------------------------------

  Zope X3.0.0

    New Features

      - Improved using documentation files as tests. (Needed to test
        new security policy):

        Changed DocFileSuite:

        o If a package is passed, it must be passed as a keyword argument.
          (For now, a package can also be passed before passing any file
          names, but this generates a deprecation warning.)

        o File paths may contain '/'s as separators. These will be converted
          to native file separators at run time.

        o It is now possible to pass set-up and tear-down methods

        o It is now possible to pass a dictionary of initial global variables.

        o Error output is improved as is meta data used for verbose output.

    Restructuring

      - Implemented both, getCell and queryCell, for ISecurityMap. Also
        updated the interface.

      - Removed CacheName field and replaced it by a 'Cache Names' vocabulary
        and a Choice field.

      - Templated Pages are now called ZPT Pages.

      - The "layer" and "skin" ZCML directives were redundantly